--- a/src/components/PlanesList/PlanesList.module.css
+++ b/src/components/PlanesList/PlanesList.module.css
@@ -1,6 +1,5 @@
 .planesList {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 10px;
     padding: 10px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(540px, auto));
