--- a/src/components/Planes/Planes.module.css
+++ b/src/components/Planes/Planes.module.css
@@ -4,7 +4,7 @@
     padding: 12px 16px;
     font-size: 32px;
     text-align: center;
-    border: 1px solid #9b9b00;
+    border: 1px solid #5d5d5d;
     border-radius: 8px;
     background-color: grey;
     color: blue;
@@ -12,11 +12,13 @@
 
 .planeTitle {
     composes: baseTitle;
+    border-color: #9d9d00;
     background-color: yellow;
 }
 
 .helicopterTitle {
     composes: baseTitle;
+    border-color: #b900b9;
     background-color: violet;
 }
 
