--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,22 +1,17 @@
 .filterBox {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1;
     display: flex;
     justify-content: space-evenly;
+    border: 2px solid #9c9c9c;
+    border-radius: 16px;
+    background-color: lightgray;
     /* outline: 1px red solid; */
 }
 
-.buttonAllFiltration {
-    outline: 2px green solid;
-}
-
-.buttonPlaneFiltration {
-    outline: 2px yellow solid;
-}
-
-.buttonHelicopterFiltration {
-    outline: 2px violet solid;
-}
-
-button {
+.button {
     margin: 20px auto;
     padding: 16px 32px;
     display: inline-block;
@@ -32,7 +27,23 @@ button {
     box-shadow: inset 0 0 16px 8px rgba(0, 0, 0, 0.3), 0 8px 16px rgba(0, 0, 0, 0.9);
 }
 
-/* .button2 {
+.button:hover {
+    color: #d9d902;
+    background-color: #902a00;
+}
+
+.buttonAllFiltration {
     composes: button;
-    background-color: #803a00;
-} */
+    outline: 6px green solid;
+}
+
+.buttonPlaneFiltration {
+    composes: button;
+    outline: 6px yellow solid;
+}
+
+.buttonHelicopterFiltration {
+    composes: button;
+    outline: 6px violet solid;
+}
+
