--- a/src/components/Planes/Planes.module.css
+++ b/src/components/Planes/Planes.module.css
@@ -87,3 +87,8 @@
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4), 2px 2px 4px rgba(0, 0, 0, 0.2), 4px 4px 8px rgba(0, 0, 0, 0.1);
     box-shadow: inset 0 0 16px 8px rgba(0, 0, 0, 0.3), 0 8px 16px rgba(0, 0, 0, 0.9);
 }
+
+.planeButton:hover {
+    color: #d9d902;
+    background-color: #902a00;
+}
