--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -7,7 +7,7 @@
     justify-content: space-evenly;
     border: 2px solid #9c9c9c;
     border-radius: 16px;
-    background-color: lightgray;
+    background-color: #c0dec9e9;
     /* outline: 1px red solid; */
 }
 
