--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,6 +1,14 @@
 body {
     margin-top: 130px;
 }
+.bgTitleBox {
+    height: 400px;
+    background: #100d0d;
+    background-image: url(/airplane-model-store3-state1/images/planes-actual/all-7-bg-comp-3.jpg);
+    background-position: left 50px;
+    background-repeat: repeat-x;
+    background-size: auto 350px;
+}
 
 .lugrasimoBold {
     font-family: "Lugrasimo", cursive;
@@ -12,7 +20,9 @@ body {
     margin-bottom: 24px;
     font-size: 48px;
     text-align: center;
-    color: darkred;
+    color: #d90000;
+    /* color: #f7ffbc; */
+    text-shadow: 3px 3px 3px #ffdac1;
 }
 
 .titleLugrasimoBold {
@@ -20,7 +30,8 @@ body {
     margin-bottom: 24px;
     font-size: 48px;
     text-align: center;
-    color: darkred;
+    color: #d90000;
+    /* color: #f7ffbc; */
+    text-shadow: 3px 3px 3px #ffdac1;
 }
-
 
