--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,6 +1,11 @@
-body {
-    margin-top: 130px;
+/* body {
+    margin-top: 113px;
+} */
+
+.section {
+    margin-top: 113px;
 }
+
 .bgTitleBox {
     height: 400px;
     background: #100d0d;
@@ -18,7 +23,7 @@ body {
 
 .title {
     margin-bottom: 24px;
-    font-size: 48px;
+    font-size: 60px;
     text-align: center;
     color: #d90000;
     /* color: #f7ffbc; */
@@ -28,7 +33,7 @@ body {
 .titleLugrasimoBold {
     composes: lugrasimoBold;
     margin-bottom: 24px;
-    font-size: 48px;
+    font-size: 60px;
     text-align: center;
     color: #d90000;
     /* color: #f7ffbc; */
