--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,11 +1,11 @@
 .filterBox {
     width: 100%;
     position: fixed;
-    top: 10px;
+    top: 0;
     z-index: 1;
     display: flex;
     justify-content: space-evenly;
-    border: 2px solid #9c9c9c;
+    border: 8px solid #719e7091;
     border-radius: 16px;
     background-color: #c0dec9e9;
     /* outline: 1px red solid; */
