--- a/src/components/PlanesList/PlanesList.module.css
+++ b/src/components/PlanesList/PlanesList.module.css
@@ -7,27 +7,33 @@
     /* outline: 1px solid red; */
 }
 
-/** backgroundColor: '#ffdb92', // "year" до 1946 */
+
 .planesItem {
     display: grid;
     gap: 12px;
     padding: 10px;
     border: 1px solid grey;
     border-radius: 8px;
-    background-color: #ffdb92;
-    /* outline: 1px solid grey; */
+    background-color: lightgray;
 }
-
-/** backgroundColor: '#d2fdbd', // "year"  1946 - 1999 - last */
-.planesItemLast {
+/** backgroundColor: '#ffd1d1', // "year" до 1939 - (WWI (1914–1918) + The "Golden Age" of aviation (1918–1939))*/
+.planesItemWWIGoldenAge {
+    composes: planesItem;
+    background-color: #ffd1d1;
+}
+/** backgroundColor: '#ffdb92', // "year" 1939–1945 - (WWII (1939–1945))*/
+.planesItemWWII {
+    composes: planesItem;
+    background-color: #ffdb92;
+}
+/** backgroundColor: '#d2fdbd', // "year" 1946-1999 - (Jet age (1946–1999)) */
+.planesItemJetAge {
     composes: planesItem;
     background-color: #d2fdbd;
 }
 
-/** backgroundColor: '#d6f1ff', // "year" від 2000 - current */
-
-/* todo: var.2  та var.2.1 */
-.planesItemCurrent {
+/** backgroundColor: '#d6f1ff', // "year" від 2000 - (Нинішнє століття (2000-до наших днів)) */
+.planesItemCurrentAge {
     composes: planesItem;
     background-color: #d6f1ff;
 }
