--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -34,15 +34,18 @@
 
 .buttonAllFiltration {
     composes: button;
-    outline: 6px green solid;
+    border: 6px green solid;
+    /* outline: 6px green solid; */
 }
 
 .buttonPlaneFiltration {
     composes: button;
+    border: 6px #f59aa9 solid;
     outline: 6px yellow solid;
 }
 
 .buttonHelicopterFiltration {
     composes: button;
-    outline: 6px #f59aa9 solid;
+    border: 6px #9accf5 solid;
+    /* outline: 6px #f59aa9 solid; */
 }
